# biz/router/task/task.go
@@ -1,0 +1,39 @@
+// Code generated by hertz generator. DO NOT EDIT.
+
+package task
+
+import (
+	"github.com/cloudwego/hertz/pkg/app/server"
+	task "jobor/biz/handler/task"
+)
+
+/*
+ This file will register all the routes of the services in the master idl.
+ And it will update automatically when you use the "update" command for the idl.
+ So don't modify the contents of the file, or your code will be deleted when it is updated.
+*/
+
+// Register register routes based on the IDL 'api.${HTTP Method}' annotation.
+func Register(r *server.Hertz) {
+
+	root := r.Group("/", rootMw()...)
+	{
+		_api := root.Group("/api", _apiMw()...)
+		{
+			_v1 := _api.Group("/v1", _v1Mw()...)
+			{
+				_jobor := _v1.Group("/jobor", _joborMw()...)
+				_jobor.GET("/task", append(_gettaskMw(), task.GetTask)...)
+				_task := _jobor.Group("/task", _taskMw()...)
+				_task.PUT("/:id", append(_puttaskMw(), task.PutTask)...)
+				_task.DELETE("/:id", append(_deletetaskMw(), task.DeleteTask)...)
+				_jobor.POST("/task", append(_posttaskMw(), task.PostTask)...)
+				_jobor.GET("/tasks", append(_gettaskallMw(), task.GetTaskAll)...)
+				{
+					_task0 := _jobor.Group("/task", _task0Mw()...)
+					_task0.GET("/:id", append(_gettaskbyidMw(), task.GetTaskById)...)
+				}
+			}
+		}
+	}
+}
