# docs/swagger.json
@@ -39,6 +39,45 @@
                 "responses": {}
             }
         },
+        "/api/v1/jobor/gen-token": {
+            "post": {
+                "responses": {}
+            }
+        },
+        "/api/v1/jobor/migrate": {
+            "get": {
+                "responses": {}
+            }
+        },
+        "/api/v1/jobor/state-code": {
+            "get": {
+                "responses": {}
+            }
+        },
+        "/api/v1/jobor/task": {
+            "get": {
+                "responses": {}
+            },
+            "post": {
+                "responses": {}
+            }
+        },
+        "/api/v1/jobor/task/:id": {
+            "get": {
+                "responses": {}
+            },
+            "put": {
+                "responses": {}
+            },
+            "delete": {
+                "responses": {}
+            }
+        },
+        "/api/v1/jobor/tasks": {
+            "get": {
+                "responses": {}
+            }
+        },
         "/api/v1/jobor/user-self": {
             "get": {
                 "responses": {}
@@ -223,6 +262,11 @@
             }
         },
         "/api/v1/sys/users": {
+            "get": {
+                "responses": {}
+            }
+        },
+        "/routes": {
             "get": {
                 "responses": {}
             }
